tests/ui/subcommand_opt_vec.stderr
error: proc-macro derive panicked
  --> $DIR/subcommand_opt_vec.rs:13:10
   |
13 | #[derive(StructOpt)]
   |          ^^^^^^^^^
   |
   = help: message: Option<Vec<T>> type is not allowed for subcommand
